--- a/security.html
+++ b/security.html
@@ -39,7 +39,13 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://hostway.workable.com/j/AAA89DE9D1'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
+<h5><a href='https://flextrade.recruitee.com/o/junior-security-analyst-fixed-term-6-months'>
+      Junior Security Analyst (Fixed Term ? 6 months) - FlexTrade
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hostway.workable.com/j/AAA89DE9D1'>Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -55,11 +61,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/logitech/job/o7Kuafwf'>Logitech Careers - IT Security Operations Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/logitech/job/o7Kuafwf'>Logitech Careers - IT Security Operations Analyst</a></h5> 
 <p><span class="badge badge-light">Chennai</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/trustwave/job/oofDafwa'>Security Analyst - SOC | Trustwave Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trustwave/job/oofDafwa'>Security Analyst - SOC | Trustwave Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -92,11 +98,11 @@ to enhance cyber adversary detection, network defense, and SOC process?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://zycus-1.workable.com/j/0AB165E01E'>Zycus - Jobs: Application Security Architect (Java) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zycus-1.workable.com/j/0AB165E01E'>Zycus - Jobs: Application Security Architect (Java) - Apply online</a></h5> 
 <p><span class="badge badge-light">Maharashtra, India</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://zycus-1.workable.com/j/6C8ACDAE50'>Zycus - Jobs: Application Security Architect (Java) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zycus-1.workable.com/j/6C8ACDAE50'>Zycus - Jobs: Application Security Architect (Java) - Apply online</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -126,7 +132,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/perimeterx/84a37b49-2d8e-432c-9096-cc56f7a3f1b9'>PerimeterX - Cyber Security Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/perimeterx/84a37b49-2d8e-432c-9096-cc56f7a3f1b9'>PerimeterX - Cyber Security Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -154,7 +160,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Information Security Analyst at QuintoAndar.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/curology/jobs/1791134'>Job Application for DevOps Security Engineer  at Curology</a></h5> 
+<h5><a href='https://boards.greenhouse.io/curology/jobs/1791134'>Job Application for DevOps Security Engineer  at Curology</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -221,11 +227,11 @@ Loading.</p>
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/E7AEE43F1B'>QuintoAndar - Jobs: Software Security Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/E7AEE43F1B'>QuintoAndar - Jobs: Software Security Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Software Security Engineer at QuintoAndar.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/1B6C29AB70?viewed=true'>Girteka Logistics - Jobs: MS Cloud Security Engineer - Apply online</a></h5> 
+<h5><a href='https://workable.com/j/1B6C29AB70?viewed=true'>Girteka Logistics - Jobs: MS Cloud Security Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of MS Cloud Security Engineer at Girteka Logistics.</p>
 <hr/>
@@ -238,7 +244,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Apply online for the job of Security Engineer at Viva Wallet.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://klook.applytojob.com/apply/2OaByd96fT/Security-Analyst-SG'>Security Analyst (SG) - Klook - Career Page</a></h5> 
+<h5><a href='http://klook.applytojob.com/apply/2OaByd96fT/Security-Analyst-SG'>Security Analyst (SG) - Klook - Career Page</a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -336,7 +342,7 @@ today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 8, 2019 ... Apply online for the job of Information Security Analyst at Davy.</p>
 <hr/>
-<h5><a href='https://edc.referrals.selectminds.com/jobs/sr-security-certification-engineer-2237'>Sr Security Certification Engineer - Entrust Datacard Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://edc.referrals.selectminds.com/jobs/sr-security-certification-engineer-2237'>Sr Security Certification Engineer - Entrust Datacard Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -436,7 +442,7 @@ lead the Mixed-Signal Design Group. This is an electrical design engineering?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://wfcareers.referrals.selectminds.com/jobs/information-security-architect-1944'>Information Security Architect - Westfield Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wfcareers.referrals.selectminds.com/jobs/information-security-architect-1944'>Information Security Architect - Westfield Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -452,11 +458,7 @@ lead the Mixed-Signal Design Group. This is an electrical design engineering?...
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://garmin-cluj.workable.com/j/12FBFC932E'>Garmin Cluj - Jobs: Cyber Security and Threat Engineer - Apply online</a></h5> 
-<p><span class="badge badge-light">Cluj-Napoca, Cluj County, Romania</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
