--- a/devops.html
+++ b/devops.html
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://brz.softgarden.io/job/4305569/TFS-Administrator-DevOps-Administrator-m-w-d-?jobDbPVId=12136469&amp;l=de'>TFS Administrator / DevOps Administrator (m/w/d)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://brz.softgarden.io/job/4305569/TFS-Administrator-DevOps-Administrator-m-w-d-?jobDbPVId=12136469&amp;l=de'>TFS Administrator / DevOps Administrator (m/w/d)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -104,7 +104,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://synedat.join.com/jobs/267792-devops-engineer-m-w-d'>Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN</a></h5> 
+<h5><a href='https://synedat.join.com/jobs/267792-devops-engineer-m-w-d'>Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -153,7 +153,7 @@ leading?...</p>
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DellInternationalServices/743999692248604-devops-engineer'>Dell International Services DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DellInternationalServices/743999692248604-devops-engineer'>Dell International Services DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -200,7 +200,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://firstwestcu.referrals.selectminds.com/jobs/devops-engineer-1704'>DevOps Engineer - First West Credit Union Careers</a></h5> 
+<h5><a href='https://firstwestcu.referrals.selectminds.com/jobs/devops-engineer-1704'>DevOps Engineer - First West Credit Union Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -262,11 +262,11 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/resultadosdigitais/jobs/4364094002'>Job Application for SRE / DevOps at Resultados Digitais</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/resultadosdigitais/jobs/4364094002'>Job Application for SRE / DevOps at Resultados Digitais</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/resultadosdigitais/jobs/4364107002'>Job Application for SRE / DevOps - Joinville/SC at Resultados Digitais</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/resultadosdigitais/jobs/4364107002'>Job Application for SRE / DevOps - Joinville/SC at Resultados Digitais</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -332,7 +332,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of DevOps Engineer at Fetchr.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/19026CFFDB'>QuadPay - Jobs: Senior Software Engineer (DevOps) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/19026CFFDB'>QuadPay - Jobs: Senior Software Engineer (DevOps) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Senior Software Engineer (DevOps) at QuadPay.</p>
 <hr/>
@@ -376,7 +376,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://mastek-uk.workable.com/j/C34464ACAE'>Mastek (UK) Ltd - Jobs: AWS DevOps Engineer - Birmingham - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mastek-uk.workable.com/j/C34464ACAE'>Mastek (UK) Ltd - Jobs: AWS DevOps Engineer - Birmingham - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -407,7 +407,7 @@ published: 08.03.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/260855-devops-engineer-senior-devops-engineer'>Job @ TwinCap (Z?rich): DevOps Engineer / Senior D... | JOIN</a></h5> 
+<h5><a href='https://twincap.join.com/jobs/260855-devops-engineer-senior-devops-engineer'>Job @ TwinCap (Z?rich): DevOps Engineer / Senior D... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 4 Tagen ... TwinCap GmbH has a job opening for DevOps Engineer / Senior DevOps 
 Engineer in Z?rich (published: 19.07.2019). Apply now or check the other 
@@ -436,7 +436,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p>5 days ago ... ... Fortune 1000 and Middle Market brands acquire, retain and grow customer 
 relationships through actionable data, advanced analytics and machine learning.</p>
 <hr/>
-<h5><a href='https://mitre.referrals.selectminds.com/jobs/devops-strategic-advisor-6482'>DevOps Strategic Advisor - MITRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/devops-strategic-advisor-6482'>DevOps Strategic Advisor - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
